# NICTA-Haskell-TTT-Challenge

./: README.md  tictactoe.cabal
src/: Main.hs
tests/: Tests.hs
