name:               tictactoe
version:            0.1.0.0
synopsis:           An attempt at Tony Morris' Tic-Tac-Toe Challenge.
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Rob Howard
maintainer:         rob@robhoward.id.au
build-type:         Simple
-- extra-source-files: CHANGELOG
cabal-version:      >=1.10

executable tictactoe
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
                    base >= 3 && < 5
  ghc-options:
                    -Wall
                    -threaded
  -- other-modules:
  -- other-extensions:
  -- default-extensions:

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests
  ghc-options:
                    -Wall
                    -threaded
  build-depends:
                    base              >= 3 && < 5
                  , filepath          >= 1.3
                  , directory         >= 1.1
                  , hspec             >= 1.8 && <2.1
                  , QuickCheck        >= 2.0
                  , template-haskell  >= 2.8
